minor change to prevent cors error